--- a/CVonline.html
+++ b/CVonline.html
@@ -469,8 +469,8 @@
                             <div class="elementor-widget-container">
                               <p>
                                 I am Phuoc Sang, web developer from Can Tho
-                                University and I am working at TechBase Viet Nam
-                                in Ho Chi Minh City.
+                                University and I have been working at TechBase Viet Nam company 
+                                in Ho Chi Minh City for a year.
                               </p>
                             </div>
                           </div>
