remove get in touch

--- a/index.html
+++ b/index.html
@@ -626,9 +626,9 @@
                     >
                       <div class="elementor-widget-container">
                         <p>
-                          Programing language:
+                          Programing languages:
                           <span class="text-dark">
-                            PHP, Javascript, Typescript,
+                            PHP, Javascript, Typescript.
                           </span>
                         </p>
                       </div>
@@ -1001,7 +1001,7 @@
                       "
                     >
                       <div
-                        class="d-flex justify-contents-between quick-link mb-5"
+                        class="d-flex justify-contents-between quick-link"
                       >
                         <a
                           class="btn btn-icon facebook"
@@ -1027,335 +1027,6 @@
                             ><i class="fab fa-linkedin"></i>
                           </span>
                         </a>
-                      </div>
-                      <div
-                        class="elementor-container elementor-column-gap-default"
-                      >
-                        <div
-                          class="
-                            elementor-column
-                            elementor-col-33
-                            elementor-inner-column
-                            elementor-element
-                            elementor-element-4b7804b9
-                          "
-                        >
-                          <div
-                            class="
-                              elementor-widget-wrap elementor-element-populated
-                            "
-                          >
-                            <div
-                              class="
-                                elementor-element
-                                elementor-element-35b1d723
-                                elementor-widget
-                                elementor-widget-bako-contact
-                              "
-                            >
-                              <div class="elementor-widget-container">
-                                <div class="contact-info">
-                                  <i class="fas fa-phone"></i>
-                                  <div class="details">
-                                    <h5>Phone</h5>
-                                    <span>0587519510</span>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                            <div
-                              class="
-                                elementor-element
-                                elementor-element-379ff882
-                                elementor-widget
-                                elementor-widget-spacer
-                              "
-                            >
-                              <div class="elementor-widget-container">
-                                <div class="elementor-spacer">
-                                  <div class="elementor-spacer-inner"></div>
-                                </div>
-                              </div>
-                            </div>
-                            <div
-                              class="
-                                elementor-element
-                                elementor-element-34ca227a
-                                elementor-widget
-                                elementor-widget-bako-contact
-                              "
-                            >
-                              <div class="elementor-widget-container">
-                                <div class="contact-info">
-                                  <i class="fas fa-envelope"></i>
-                                  <div class="details">
-                                    <h5>Email address</h5>
-                                    <span>ppsang98@gmail.com</span>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                            <div
-                              class="
-                                elementor-element
-                                elementor-element-5fd0dab3
-                                elementor-widget
-                                elementor-widget-spacer
-                              "
-                            >
-                              <div class="elementor-widget-container">
-                                <div class="elementor-spacer">
-                                  <div class="elementor-spacer-inner"></div>
-                                </div>
-                              </div>
-                            </div>
-                            <div
-                              class="
-                                elementor-element
-                                elementor-element-2fb44445
-                                elementor-widget
-                                elementor-widget-bako-contact
-                              "
-                            >
-                              <div class="elementor-widget-container">
-                                <div class="contact-info">
-                                  <i class="fas fa-map-marker-alt"></i>
-                                  <div class="details">
-                                    <h5>Location</h5>
-                                    <span
-                                      >903 Tran Xuan Soan, Seven District, Ho
-                                      Chi Minh City</span
-                                    >
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                        <div
-                          class="
-                            elementor-column
-                            elementor-col-66
-                            elementor-inner-column
-                            elementor-element
-                            elementor-element-7701f806
-                          "
-                        >
-                          <div
-                            class="
-                              elementor-widget-wrap elementor-element-populated
-                            "
-                          >
-                            <div
-                              class="
-                                elementor-element
-                                elementor-element-2ea832d9
-                                elementor-widget
-                                elementor-widget-spacer
-                              "
-                            >
-                              <div class="elementor-widget-container">
-                                <div class="elementor-spacer">
-                                  <div class="elementor-spacer-inner"></div>
-                                </div>
-                              </div>
-                            </div>
-                            <div
-                              class="
-                                elementor-element
-                                elementor-element-48c3e48e
-                                elementor-widget
-                                elementor-widget-shortcode
-                              "
-                            >
-                              <div class="elementor-widget-container">
-                                <div class="elementor-shortcode">
-                                  <div
-                                    role="form"
-                                    class="wpcf7"
-                                    id="wpcf7-f82-p99-o1"
-                                    lang="en-US"
-                                    dir="ltr"
-                                  >
-                                    <div class="screen-reader-response">
-                                      <p
-                                        role="status"
-                                        aria-live="polite"
-                                        aria-atomic="true"
-                                      ></p>
-                                      <ul></ul>
-                                    </div>
-                                    <form
-                                      action="/themes/wp/bako/#wpcf7-f82-p99-o1"
-                                      method="post"
-                                      class="wpcf7-form init"
-                                      novalidate="novalidate"
-                                      data-status="init"
-                                    >
-                                      <div style="display: none">
-                                        <input
-                                          type="hidden"
-                                          name="_wpcf7"
-                                          value="82"
-                                        />
-                                        <input
-                                          type="hidden"
-                                          name="_wpcf7_version"
-                                          value="5.4.1"
-                                        />
-                                        <input
-                                          type="hidden"
-                                          name="_wpcf7_locale"
-                                          value="en_US"
-                                        />
-                                        <input
-                                          type="hidden"
-                                          name="_wpcf7_unit_tag"
-                                          value="wpcf7-f82-p99-o1"
-                                        />
-                                        <input
-                                          type="hidden"
-                                          name="_wpcf7_container_post"
-                                          value="99"
-                                        />
-                                        <input
-                                          type="hidden"
-                                          name="_wpcf7_posted_data_hash"
-                                          value=""
-                                        />
-                                      </div>
-
-                                      <div class="row">
-                                        <div class="column col-md-6">
-                                          <!-- Name input -->
-                                          <p></p>
-                                          <div class="form-group">
-                                            <span
-                                              class="
-                                                wpcf7-form-control-wrap
-                                                your-name
-                                              "
-                                              ><input
-                                                type="text"
-                                                name="your-name"
-                                                value=""
-                                                size="40"
-                                                class="
-                                                  wpcf7-form-control
-                                                  wpcf7-text
-                                                  wpcf7-validates-as-required
-                                                  form-control
-                                                "
-                                                aria-required="true"
-                                                aria-invalid="false"
-                                                placeholder="Your name"
-                                            /></span>
-                                          </div>
-                                        </div>
-                                        <div class="column col-md-6">
-                                          <!-- Email input -->
-                                          <p></p>
-                                          <div class="form-group">
-                                            <span
-                                              class="
-                                                wpcf7-form-control-wrap
-                                                your-email
-                                              "
-                                              ><input
-                                                type="email"
-                                                name="your-email"
-                                                value=""
-                                                size="40"
-                                                class="
-                                                  wpcf7-form-control
-                                                  wpcf7-text
-                                                  wpcf7-email
-                                                  wpcf7-validates-as-required
-                                                  wpcf7-validates-as-email
-                                                  form-control
-                                                "
-                                                aria-required="true"
-                                                aria-invalid="false"
-                                                placeholder="Email address"
-                                            /></span>
-                                          </div>
-                                        </div>
-                                        <div class="column col-md-12">
-                                          <!-- Email input -->
-                                          <p></p>
-                                          <div class="form-group">
-                                            <span
-                                              class="
-                                                wpcf7-form-control-wrap
-                                                your-name
-                                              "
-                                              ><input
-                                                type="text"
-                                                name="your-name"
-                                                value=""
-                                                size="40"
-                                                class="
-                                                  wpcf7-form-control
-                                                  wpcf7-text
-                                                  wpcf7-validates-as-required
-                                                  form-control
-                                                "
-                                                aria-required="true"
-                                                aria-invalid="false"
-                                                placeholder="Subject"
-                                            /></span>
-                                          </div>
-                                        </div>
-                                        <div class="column col-md-12">
-                                          <!-- Message textarea -->
-                                          <p></p>
-                                          <div class="form-group">
-                                            <span
-                                              class="
-                                                wpcf7-form-control-wrap
-                                                your-message
-                                              "
-                                            >
-                                              <textarea
-                                                name="your-message"
-                                                cols="40"
-                                                rows="4"
-                                                class="
-                                                  wpcf7-form-control
-                                                  wpcf7-textarea
-                                                  wpcf7-validates-as-required
-                                                  form-control
-                                                "
-                                                aria-required="true"
-                                                aria-invalid="false"
-                                                placeholder="Message..."
-                                              ></textarea>
-                                            </span>
-                                          </div>
-                                        </div>
-                                      </div>
-                                      <p>
-                                        <button
-                                          type="submit"
-                                          name="submit"
-                                          id="submit"
-                                          value="Submit"
-                                          class="wpcf7-submit btn btn-default"
-                                        >
-                                          Submit Message</button
-                                        ><span class="ajax-loader"></span><br />
-                                      </p>
-                                    </form>
-                                    <div
-                                      class="wpcf7-response-output"
-                                      aria-hidden="true"
-                                    ></div>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
                       </div>
                     </section>
                   </div>
